--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "element-ui": "^2.4.11",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.3.9",
+    "less-loader": "^5.0.0",
     "mavon-editor": "^2.6.17",
     "path": "^0.12.7",
     "qs": "^6.7.0",
+    "v-charts": "^1.19.0",
     "vee-validate": "^2.2.3",
     "vue": "^2.5.21",
     "vue-cookie": "^1.1.4",
@@ -21,7 +24,6 @@
     "vue-i18n": "^8.10.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vue-schart": "^1.0.0",
     "vue-validator": "^3.0.0-alpha.2",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.1.0"
